undo unrelated changes and fix valign

--- a/res/css/views/settings/notifications/_NotificationsTab.scss
+++ b/res/css/views/settings/notifications/_NotificationsTab.scss
@@ -50,6 +50,7 @@ $textareaWidth: 400px;
 
     .mx_NotificationsTab_appearanceAndSounds {
         .mx_NotificationBadge {
+            vertical-align: middle;
             display: inline-flex;
             margin-left: 2px;
             margin-right: 2px;
